// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Modal Snapshots should match snapshot when closed 1`] = `null`;

exports[`Modal Snapshots should match snapshot when open 1`] = `
<div
  aria-labelledby="modal-title"
  aria-modal="true"
  class="fixed inset-0 z-50 flex items-center justify-center"
  role="dialog"
>
  <div
    aria-hidden="true"
    class="fixed inset-0 bg-black/50 backdrop-blur-sm"
  />
  <div
    class="relative z-10 mx-4 max-h-[90vh] w-full max-w-md overflow-y-auto rounded-lg bg-white shadow-xl"
    tabindex="-1"
  >
    <div
      class="flex items-center justify-between border-b border-gray-200 p-6"
    >
      <h2
        class="text-xl font-semibold text-gray-900"
        id="modal-title"
      >
        Test Modal
      </h2>
      <button
        aria-label="Close modal"
        class="rounded-lg p-1 text-gray-400 hover:text-gray-600 focus:ring-2 focus:ring-blue-500 focus:outline-none"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-x h-5 w-5"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M18 6 6 18"
          />
          <path
            d="m6 6 12 12"
          />
        </svg>
      </button>
    </div>
    <div
      class="p-6"
    >
      <p>
        Modal content
      </p>
    </div>
  </div>
</div>
`;

exports[`Modal Snapshots should match snapshot with complex children 1`] = `
<div
  aria-labelledby="modal-title"
  aria-modal="true"
  class="fixed inset-0 z-50 flex items-center justify-center"
  role="dialog"
>
  <div
    aria-hidden="true"
    class="fixed inset-0 bg-black/50 backdrop-blur-sm"
  />
  <div
    class="relative z-10 mx-4 max-h-[90vh] w-full max-w-md overflow-y-auto rounded-lg bg-white shadow-xl"
    tabindex="-1"
  >
    <div
      class="flex items-center justify-between border-b border-gray-200 p-6"
    >
      <h2
        class="text-xl font-semibold text-gray-900"
        id="modal-title"
      >
        Test Modal
      </h2>
      <button
        aria-label="Close modal"
        class="rounded-lg p-1 text-gray-400 hover:text-gray-600 focus:ring-2 focus:ring-blue-500 focus:outline-none"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-x h-5 w-5"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M18 6 6 18"
          />
          <path
            d="m6 6 12 12"
          />
        </svg>
      </button>
    </div>
    <div
      class="p-6"
    >
      <div>
        <h3>
          Heading
        </h3>
        <p>
          Paragraph text
        </p>
        <button>
          Action Button
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Modal Snapshots should match snapshot with custom title 1`] = `
<div
  aria-labelledby="modal-title"
  aria-modal="true"
  class="fixed inset-0 z-50 flex items-center justify-center"
  role="dialog"
>
  <div
    aria-hidden="true"
    class="fixed inset-0 bg-black/50 backdrop-blur-sm"
  />
  <div
    class="relative z-10 mx-4 max-h-[90vh] w-full max-w-md overflow-y-auto rounded-lg bg-white shadow-xl"
    tabindex="-1"
  >
    <div
      class="flex items-center justify-between border-b border-gray-200 p-6"
    >
      <h2
        class="text-xl font-semibold text-gray-900"
        id="modal-title"
      >
        Custom Modal Title
      </h2>
      <button
        aria-label="Close modal"
        class="rounded-lg p-1 text-gray-400 hover:text-gray-600 focus:ring-2 focus:ring-blue-500 focus:outline-none"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-x h-5 w-5"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M18 6 6 18"
          />
          <path
            d="m6 6 12 12"
          />
        </svg>
      </button>
    </div>
    <div
      class="p-6"
    >
      <p>
        Modal content
      </p>
    </div>
  </div>
</div>
`;
